# loko

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  lokoapp.cc
include/: lokobuf.h  lokotype.h
qtapp/lokoapp/: CMakeLists.txt  lokoapp_zh_CN.ts  main.cpp  mainwindow.ui  qbook.cpp  qbook.h
src/: CMakeLists.txt  lokocmd.cc  lokocmd.h  lokocore.cc  lokocore.h  lokoinc.h  lokolog.cc  lokomupdf.h  lokostatus.h
src/core/: CMakeLists.txt  lokocore.cc  lokocore.h  lokoinc.h
src/imageutil/: CMakeLists.txt  cv2qt.cc  cv2qt.h
src/lokobook/: CMakeLists.txt  lokobook.cc  lokobook.h  lokomupdf.cc  lokomupdf.h  lokopdf.h
src/lokocv/: CMakeLists.txt  lokocvcore.cc  lokocvcore.h  lokocvinc.h
src/lokodb/: CMakeLists.txt  lokodb.cc  lokodb.h  lokosqlite.cc  lokosqlite.h
src/lokomanage/: CMakeLists.txt  lokomanage.cc  lokomanage.h
src/lokoutils/: CMakeLists.txt  lokocmd.cc  lokocmd.h  lokolog.cc  lokolog.h  lokoutils.cc  lokoutils.h
test/: CMakeLists.txt
